SERVER-45222 Fix so the ProgramMultiplexer can output while the shell is waiting for input.

(cherry picked from commit 743076c7047ddbbda8ef6aec55ead1ad3769030b)