src/mongo/logv2/log_tag.h
@@ -49,7 +49,17 @@ public:
 
         // representing the logv1 plainShellOutput domain
         kPlainShell = 1 << 2,
+
+        // allow logging while the shell is waiting for user input
+        kAllowDuringPromptingShell = 1 << 3,
     };
+
+    friend Value operator|(Value a, Value b) {
+        return static_cast<Value>(static_cast<uint64_t>(a) | static_cast<uint64_t>(b));
+    }
+    friend Value operator&(Value a, Value b) {
+        return static_cast<Value>(static_cast<uint64_t>(a) & static_cast<uint64_t>(b));
+    }
 
     LogTag() : _value(kNone) {}
     /* implicit */ LogTag(Value value) {
@@ -69,5 +79,6 @@ public:
 private:
     uint64_t _value;
 };
+
 }  // namespace logv2
 }  // namespace mongo
